--- a/src/app/modules/landing/components/landing-page/landing-page.component.html
+++ b/src/app/modules/landing/components/landing-page/landing-page.component.html
@@ -1,29 +1,17 @@
-<table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
-      </tr>
-    </tbody>
-  </table>
+<shared-navbar></shared-navbar>
+<div class="container overflow-hidden text-center">
+  <div class="row gy-5">
+    <div class="col-6 obraSocial">
+      <a href="auth"><img src="assets/osde.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
+    </div>
+    <div class="col-6 obraSocial">      
+      <a  href="auth"><img src="assets/ospe.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
+    </div>
+    <div class="col-6 obraSocial">
+      <a href="auth"><img src="assets/federadaSalud.jpg" class="img-fluid p-3 federada" alt="Imagen de medife"></a>
+    </div>
+    <div class="col-6 obraSocial">
+      <a href="auth"><img src="assets/medife.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
+    </div>
+  </div>
+</div>
