--- a/src/app/modules/landing/components/landing-page/landing-page.component.html
+++ b/src/app/modules/landing/components/landing-page/landing-page.component.html
@@ -1,17 +1,38 @@
 <shared-navbar></shared-navbar>
-<div class="container overflow-hidden text-center">
-  <div class="row gy-6">
-    <div class="col-5 obraSocial">
+
+<body>
+<div class="container px-4 text-center inicio">
+  <h1>Clinica Mar del Plata</h1>
+  <div class="row gx-5">
+    <div class="col">
+     <div class="p-3">En nuestra clinica siempre buscamos brindar un servicio de alto nivel, por eso contamos con los mejores profesionales y todas las mutuales</div>
+    </div>
+    <div class="col">
+      <div class="p-3"><img src="assets/hospital.jpg" class="img-fluid rounded" alt=""></div>
+    </div>
+  </div>
+</div>
+<div class="row boton-mutuales">
+<p class="d-inline-flex gap-1">
+  <a class="btn btn-primary boton-mutuales-contenido" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" >
+    Ver Mutuales
+  </a>
+</p>
+</div>
+<div class="container overflow-hidden text-center collapse" id="collapseExample" >
+  <div class="row" id="collapseExample">
+    <div class="col obraSocial">
       <a href="auth"><img src="assets/osde.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
     </div>
-    <div class="col-5 obraSocial">      
+    <div class="col obraSocial">      
       <a  href="auth"><img src="assets/ospe.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
     </div>
-    <div class="col-5 obraSocial">
+    <div class="col obraSocial">
       <a href="auth"><img src="assets/federadaSalud.jpg" class="img-fluid p-3 federada" alt="Imagen de medife"></a>
     </div>
-    <div class="col-5 obraSocial">
+    <div class="col obraSocial">
       <a href="auth"><img src="assets/medife.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
     </div>
   </div>
 </div>
+</body>
