--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,11 +1,18 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
+<nav class="navbar navbar-expand-lg  contenedorNavBar">
+  <div class="container-fluid" >
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon">
+        
+      </span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <img src="assets/logo.png" class="logoNav" alt="">
+    <div class="collapse navbar-collapse navBar"  id="navbarNavAltMarkup">
+      
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="auth">Login</a>
+        
+        <!-- <a class="nav-link active" aria-current="page" href="auth"><p>Nuestra Historia</p></a>
+        <a class="nav-link active" aria-current="page" href="auth"><p>Con quien trabajamos</p></a> -->
+        <a class="nav-link active" aria-current="page" href="auth"><p>Login</p></a>
       </div>
     </div>
   </div>
