--- a/src/app/modules/landing/components/landing-page/landing-page.component.css
+++ b/src/app/modules/landing/components/landing-page/landing-page.component.css
@@ -1,21 +1,71 @@
 
 
 .inicio{
-    margin-bottom: 60px;
-    
+    margin-bottom: 0px;
 }
 
 body{
-    width: 100%;
-    height: 2000px;
-    background-image: url("src/assets/flooring.jpg");
+    min-height: 1050px;
+    /*background-image: url("src/assets/4931029.jpg");*/
+    background-size: 100%;
+
 }
-.boton-mutuales{
+h1{
+    font-size: 50px;
+    padding: 40px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
+.contenedorMutuales{
+    height: 257px;
     display: flex;
+    justify-content: center;
+    text-align: center;
+}
+h2{
+    margin-bottom: 50px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
+.filaMutuales{
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+}
+
+
+
+.obraSocial{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.imagenMutual{
+
+    height: 140px;
+    width: 140px;
 }
 
 .boton-mutuales-contenido{
     margin:auto;
+    
 }
 
+.carrousel{
+    height: 450px;
+    width: 100%;
+}
+
+.imagen{
+    height: 95%;
+}
+
+.logo
+{
+    height: 225px;
+    width: 550px;
+    margin-bottom: 15px;
+}
 
