--- a/src/app/modules/landing/components/landing-page/landing-page.component.html
+++ b/src/app/modules/landing/components/landing-page/landing-page.component.html
@@ -1,38 +1,71 @@
 <shared-navbar></shared-navbar>
 
 <body>
-<div class="container px-4 text-center inicio">
-  <h1>Clinica Mar del Plata</h1>
-  <div class="row gx-5">
-    <div class="col">
-     <div class="p-3">En nuestra clinica siempre buscamos brindar un servicio de alto nivel, por eso contamos con los mejores profesionales y todas las mutuales</div>
-    </div>
-    <div class="col">
-      <div class="p-3"><img src="assets/hospital.jpg" class="img-fluid rounded" alt=""></div>
-    </div>
-  </div>
-</div>
-<div class="row boton-mutuales">
-<p class="d-inline-flex gap-1">
-  <a class="btn btn-primary boton-mutuales-contenido" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" >
-    Ver Mutuales
-  </a>
-</p>
-</div>
-<div class="container overflow-hidden text-center collapse" id="collapseExample" >
-  <div class="row" id="collapseExample">
-    <div class="col obraSocial">
-      <a href="auth"><img src="assets/osde.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
-    </div>
-    <div class="col obraSocial">      
-      <a  href="auth"><img src="assets/ospe.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
-    </div>
-    <div class="col obraSocial">
-      <a href="auth"><img src="assets/federadaSalud.jpg" class="img-fluid p-3 federada" alt="Imagen de medife"></a>
-    </div>
-    <div class="col obraSocial">
-      <a href="auth"><img src="assets/medife.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
+<div class=".container text-center inicio">
+  <img class="logo" src="assets/titulo2.png">
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+    
+    <div class="carousel-inner">
+      <div class="carousel-item active carrousel"data-bs-interval="3000" >
+        <img src="assets/consultorio2.jpg" class="img-thumbnail imagen" alt="...">
+        
+      </div>
+      <div class="carousel-item carrousel" data-bs-interval="3000">
+        <img src="assets/medica.jpg" class="img-thumbnail imagen" alt="...">
+        
+      </div>
+      <div class="carousel-item carrousel" data-bs-interval="3000">
+        <img src="assets/pasillo.jpg" class="img-thumbnail imagen" alt="...">
+        
+      </div>
     </div>
   </div>
 </div>
+<div class=".container" >
+  
+  <div class="row filaMutuales contenedorMutuales" >
+    <h2>Trabajan con nosotros</h2>
+    <div class="col-2 obraSocial" >
+      <a href="auth"><img src="assets/osde.jpg" class="imagenMutual" alt="Imagen de medife"></a>
+    </div>
+    <div class="col-2 obraSocial">      
+      <a  href="auth"><img src="assets/ospe.jpg" class="imagenMutual" alt="Imagen de medife"></a>
+    </div>
+    <div class="col-2 obraSocial">
+      <a href="auth"><img src="assets/federadaSalud.jpg" class="imagenMutual " alt="Imagen de medife"></a>
+    </div>
+    <div class="col-2 obraSocial">
+      <a href="auth"><img src="assets/medife.jpg" class="imagenMutual" alt="Imagen de medife"></a>
+    </div>
+  </div>
+</div>
+
 </body>
+
+<shared-footer></shared-footer>
+
+<!--
+<div class="row boton-mutuales">
+  <p class="d-inline-flex gap-1">
+    <a class="btn btn-primary boton-mutuales-contenido" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" >
+      Ver Mutuales
+    </a>
+  </p>
+  </div>
+  <div class="container overflow-hidden text-center collapse" id="collapseExample" >
+    <div class="row" id="collapseExample">
+      <div class="col obraSocial">
+        <a href="auth"><img src="assets/osde.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
+      </div>
+      <div class="col obraSocial">      
+        <a  href="auth"><img src="assets/ospe.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
+      </div>
+      <div class="col obraSocial">
+        <a href="auth"><img src="assets/federadaSalud.jpg" class="img-fluid p-3 federada" alt="Imagen de medife"></a>
+      </div>
+      <div class="col obraSocial">
+        <a href="auth"><img src="assets/medife.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
+      </div>
+    </div>
+  </div>
+-->
