funcion de mostrar medicos por especialidad y por OS

--- a/src/app/modules/landing/components/landing-page/landing-page.component.html
+++ b/src/app/modules/landing/components/landing-page/landing-page.component.html
@@ -26,16 +26,16 @@
   <div class="row filaMutuales contenedorMutuales" >
     <h2>Trabajan con nosotros</h2>
     <div class="col-2 obraSocial" >
-      <a href="auth"><img src="assets/osde.jpg" class="imagenMutual" alt="Imagen de medife"></a>
+      <a (click)="medicosXmutual(1)" ><img src="assets/osde.jpg" class="imagenMutual" alt="Imagen de medife"></a>
     </div>
     <div class="col-2 obraSocial">      
-      <a  href="auth"><img src="assets/ospe.jpg" class="imagenMutual" alt="Imagen de medife"></a>
+      <a (click)="medicosXmutual(2)" ><img src="assets/ospe.jpg" class="imagenMutual" alt="Imagen de medife"></a>
     </div>
     <div class="col-2 obraSocial">
-      <a href="auth"><img src="assets/federadaSalud.jpg" class="imagenMutual " alt="Imagen de medife"></a>
+      <a (click)="medicosXmutual(3)" ><img src="assets/federadaSalud.jpg" class="imagenMutual " alt="Imagen de medife"></a>
     </div>
     <div class="col-2 obraSocial">
-      <a href="auth"><img src="assets/medife.jpg" class="imagenMutual" alt="Imagen de medife"></a>
+      <a (click)="medicosXmutual(4)" ><img src="assets/medife.jpg" class="imagenMutual" alt="Imagen de medife"></a>
     </div>
   </div>
 </div>
