--- a/src/app/modules/medicos/components/view-medics/view-medics.component.html
+++ b/src/app/modules/medicos/components/view-medics/view-medics.component.html
@@ -1,1 +1,10 @@
-<p>view-medics works!</p>
+<h2>MEDICOS</h2>
+
+
+
+
+<ul>
+  <li *ngFor="let doctor of medicos">
+    {{ doctor.nombre }} {{doctor.matricula}} 
+  </li>
+</ul>
