--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -5,13 +5,14 @@
         
       </span>
     </button>
-    <img src="assets/logo.png" class="logoNav" alt="">
+    <a href=""><img src="assets/logo.png" class="logoNav" alt=""></a>
     <div class="collapse navbar-collapse navBar"  id="navbarNavAltMarkup">
       
       <div class="navbar-nav">
         
         <!-- <a class="nav-link active" aria-current="page" href="auth"><p>Nuestra Historia</p></a>
         <a class="nav-link active" aria-current="page" href="auth"><p>Con quien trabajamos</p></a> -->
+        <a class="nav-link active" aria-current="page" href=""><p>Inicio</p></a>
         <a class="nav-link active" aria-current="page" href="auth"><p>Login</p></a>
       </div>
     </div>
