--- a/src/app/modules/medicos/components/view-medics/view-medics.component.html
+++ b/src/app/modules/medicos/components/view-medics/view-medics.component.html
@@ -1,10 +1,24 @@
-<h2>MEDICOS</h2>
 
-
-
-
-<ul>
-  <li *ngFor="let doctor of medicos">
-    {{ doctor.nombre }} {{doctor.matricula}} 
-  </li>
-</ul>
+<div class="container">
+<h2>Medicos</h2>
+<table class="table">
+  <thead>
+    <tr> 
+      <th scope="col">Nombre</th>
+      <th scope="col">Matricula</th>
+      <th scope="col"> Especialidad</th>
+      <th scope="col">Editar Informacion</th>
+      <th scope="col">Eliminar Medico</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let doctor of medicos">
+      <td>{{doctor.nombre}}</td>
+      <td>{{doctor.matricula}}</td>
+      <td> {{doctor.idEspecialidad}} </td>
+      <td><a href="">Editar Informacion</a></td>
+      <td><a href="">Eliminar Medico</a> </td>
+    </tr>
+  </tbody>
+</table>
+</div>
