--- a/src/app/modules/main/components/home-page/home-page.component.html
+++ b/src/app/modules/main/components/home-page/home-page.component.html
@@ -1,6 +1,11 @@
 <shared-navbar></shared-navbar>
 <body>
-<app-view-medicos-especialidad [medicosEspec]="listaMedicosEspec" (eventoParaEspecialidad)="medicosPorEspecialidad($event)" ></app-view-medicos-especialidad>
-<app-view-medics *ngIf="listaMedicosEspec.length == 0" [medicos]="listaMedicos"></app-view-medics>
+<medico-view-medicos-especialidad [visible]="isActivo" [medicosEspec]="listaMedicosEspec" (eventoParaEspecialidad)="medicosPorEspecialidad($event)" ></medico-view-medicos-especialidad>
+<medico-view-medics [visible]="isActivo"  *ngIf="listaMedicosEspec.length == 0" [medicos]="listaMedicos" (eventoParaBorrar)="borrarMedicoXobraSocial($event)" ></medico-view-medics>
 </body>
 <shared-footer></shared-footer>
+
+
+
+
+
