funcion de agregar medicos

--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -1,15 +1,15 @@
 <shared-navbar></shared-navbar>
-<body>
+<body >
     <div class="contenedorForm">
     <form class="formulario" autocomplete="off" [formGroup]="formulario" (ngSubmit)="registrar() ">
         <h2>Registrarse</h2>
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <label for="email" class="form-label">Email address</label>
           <input type="email" class="form-control" formControlName="email" id="email" aria-describedby="emailHelp">
           <span *ngIf="isValid('email')" class="span">{{getError('email')}}</span>
         </div>
         <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <label for="contraseña" class="form-label">Password</label>
           <input type="password" class="form-control" formControlName="contrasena" id="contraseña">
           <span *ngIf="isValid('contrasena')">{{getError('contrasena')}}</span>
         </div>
