--- a/src/app/modules/medicos/components/view-medicos-especialidad/view-medicos-especialidad.component.css
+++ b/src/app/modules/medicos/components/view-medicos-especialidad/view-medicos-especialidad.component.css
@@ -1,10 +1,18 @@
+
+
 .sideBar{
     /*margin-top: 25px;*/
-    width: 250px;
+    width: 10%;
     float: left;
+    margin-left: 10px;
 }
 
 .container{
+    width: 70%;
     margin-top: 25px;
+}
+
+td, tr{
+    border-bottom: 1px solid rgb(0, 255, 221);
 }
 
