--- a/src/app/modules/landing/components/landing-page/landing-page.component.css
+++ b/src/app/modules/landing/components/landing-page/landing-page.component.css
@@ -1,14 +1,17 @@
+shared-navbar div{
+    height: 7000px;
+}
 
 
 .inicio{
-    margin-bottom: 0px;
+    margin-bottom: 10px;
 }
 
-body{
-    min-height: 1050px;
-    /*background-image: url("src/assets/4931029.jpg");*/
-    background-size: 100%;
-
+.ContenedorLanding{
+    
+    margin: 0;
+    position:relative;
+    padding-bottom: 300px;
 }
 h1{
     font-size: 50px;
