--- a/src/app/modules/landing/components/landing-page/landing-page.component.html
+++ b/src/app/modules/landing/components/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 <shared-navbar></shared-navbar>
 
-<div class="ContenedorLanding">
+<body>
 <div class=".container text-center inicio">
   <img class="logo" src="assets/titulo2.png">
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
@@ -39,9 +39,10 @@
     </div>
   </div>
 </div>
-</div>
-<shared-footer></shared-footer>
 
+</body>
+
+<shared-footer></shared-footer>
 
 <!--
 <div class="row boton-mutuales">
