--- a/src/app/modules/main/components/home-page/home-page.component.css
+++ b/src/app/modules/main/components/home-page/home-page.component.css
@@ -1,8 +1,7 @@
-.divMedicComponents{
-    margin: 0;
-    position:relative;
-    padding-bottom: 220px;
+body{
+    height: 78vh;
 }
 
-
-
+medico-add-medics{
+    margin-top: 150px;
+}
