--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 
 <!-- Remove the container if you want to extend the Footer to full width. -->
-
-  <footer class="text-center text-lg-start footer" style="background-color: #1ae0d3;">
+<div class=".container">
+  <footer class="text-center text-lg-start" style="background-color: #1ae0d3;">
     <div class="container d-flex justify-content-center py-5">
       <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
         <i class="fab fa-facebook-f"></i>
@@ -23,7 +23,8 @@
     </div>
     <!-- Copyright -->
   </footer>
-
+  
+</div>
 
 
 <!-- 
