--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,1 @@
-
-
-
-
- html {
-  box-sizing: border-box;
-  }
-  
-  *,
-*:before,
-*:after{
-  box-sizing: inherit;
-}
-  
-body {
-  margin: 0;
-  position:relative;
-  min-height: 100vh;
-}
-  
-  
+/* You can add global styles to this file, and also import other style files */
