--- a/src/app/modules/landing/components/landing-page/landing-page.component.html
+++ b/src/app/modules/landing/components/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 <shared-navbar></shared-navbar>
 
-<body>
+<div class="ContenedorLanding">
 <div class=".container text-center inicio">
   <img class="logo" src="assets/titulo2.png">
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
@@ -40,7 +40,7 @@
   </div>
 </div>
 
-</body>
+</div>
 
 <shared-footer></shared-footer>
 
