--- a/src/app/modules/main/components/home-page/home-page.component.html
+++ b/src/app/modules/main/components/home-page/home-page.component.html
@@ -1,15 +1,17 @@
 <shared-navbar></shared-navbar>
 <body>
 
+    <div class="divMedicComponents">
     <div *ngIf="!visible" >
 <medico-view-medicos-especialidad [visible]="isActivo" [medicos]="listaMedicos" [medicosEspec]="listaMedicosEspec" (eventoParaTraerTodosLosMedicos)="todosLosMedicos()" (eventoParaEspecialidad)="medicosPorEspecialidad($event)" (eventoParaEditar)="editarMedico($event)"  ></medico-view-medicos-especialidad>
 <medico-view-medics [visible]="isActivo"  *ngIf="listaMedicosEspec.length == 0" [medicos]="listaMedicos" (eventoParaBorrar)="borrarMedicoXobraSocial($event)" (eventoParaEditar)="editarMedico($event)" ></medico-view-medics>  
-<medico-add-medics [visible]="isActivo" [numberIdOs]="num" (eventoParaRefrescar)="refrescar($event)" style="margin-top: 150px;" ></medico-add-medics>
+<medico-add-medics [visible]="isActivo" [numberIdOs]="num" (eventoParaRefrescar)="refrescar($event)" ></medico-add-medics>
 </div>
 <div *ngIf="visible">
 <medico-edit-medics [medico]="medicoParaEditar" (eventoParaEditar)="editMedico($event)" (eventoParaMostrar)="mostrar($event)" ></medico-edit-medics>
 </div>
 
+</div>
 
 </body>
 
