--- a/src/app/modules/medicos/components/view-medicos-especialidad/view-medicos-especialidad.component.html
+++ b/src/app/modules/medicos/components/view-medicos-especialidad/view-medicos-especialidad.component.html
@@ -1,54 +1,50 @@
-<div>
+<div *ngIf="!visible" >
 <div class="sideBar">
  <form [formGroup]="formulario">
     <h3>Selecciona una especialidad:</h3>
   <tr>
-  <input type="radio" formControlName="especialidad" [value]="'Clinica'" (click)="medicoPorEspecialidad(1)"/>
-   Clinica
+  <input type="radio" formControlName="especialidad" [value]="'Clinica'" (click)="medicoPorEspecialidad(1)" id="clin" />
+   <label for="clin">Clínica</label>
   </tr>
   <tr>
-  <input type="radio" formControlName="especialidad" [value]="'Cardiología'"  (click)="medicoPorEspecialidad(2)" />
-  Cardiología
+  <input type="radio" formControlName="especialidad" [value]="'Cardiología'"  (click)="medicoPorEspecialidad(2)" id="cardio" />
+    <label for="cardio">Cardiología</label>
   </tr>
   <tr>
-  <input type="radio" formControlName="especialidad" [value]="'Pediatria'" (click)="medicoPorEspecialidad(3)" />
-      Pediatria
+  <input type="radio" formControlName="especialidad" [value]="'Pediatria'" (click)="medicoPorEspecialidad(3)" id="pedia" />
+      <label for="pedia">Pediatría</label>
   </tr>
   <tr>
-      <input type="radio" formControlName="especialidad" [value]="'Oftalmología'" (click)="medicoPorEspecialidad(4)" />
-      Oftalmología
+      <input type="radio" formControlName="especialidad" [value]="'Oftalmología'" (click)="medicoPorEspecialidad(4)" id="ofta" />
+      <label for="ofta">Oftalmología</label>
   </tr> 
   <tr>
-    <input type="radio" formControlName="especialidad" [value]="'Todos'" (click)="TodosLosMedicos()" >
-      Todos
+    <input type="radio" formControlName="especialidad" [value]="'Todos'" (click)="BorrarFiltros()" id="todos" >
+      <label for="todos">Borrar filtros</label>
   </tr>
 </form>
 </div>
   
 
   
-    <div *ngIf="medicosEspec.length>0" class="table-responsive-lg"> 
+    <div *ngIf="activarListado" class="table-responsive-lg"> 
     <div class="container" >
       
-     <h2 > Medicos <span *ngIf="!verEspecialidad">{{especialidad}}</span> </h2>
+     <h2 > Médicos <span *ngIf="!verEspecialidad">{{especialidad}}</span> </h2>
     
      <table class="table">
        <thead>
          <tr> 
            <th scope="col">Nombre</th>
-           <th scope="col">Matricula</th>
+           <th scope="col">Matrícula</th>
            <th *ngIf="verEspecialidad" scope="col" >Especialidad</th>
-           <th *ngIf="visible" scope="col">Editar Informacion</th>
-           <th *ngIf="visible" scope="col">Eliminar Medico</th>
          </tr>
        </thead>
-       <tbody>
+       <tbody *ngIf="medicosEspec.length>0" >
          <tr *ngFor="let doctor of medicosEspec">
            <td>{{doctor.nombre}}</td>
            <td>{{doctor.matricula}}</td>
            <td *ngIf="verEspecialidad" >{{doctor.idEspecialidad}} </td>
-           <td *ngIf="visible" ><button (click)="editar(doctor)" >Editar Informacion</button></td> 
-           <td *ngIf="visible" ><button >Eliminar Medico</button> </td>
          </tr>
        </tbody>
      </table>
