Enviar rectas y trabajo terminado

--- a/src/app/modules/landing/components/landing-page/landing-page.component.html
+++ b/src/app/modules/landing/components/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
-<shared-navbar></shared-navbar>
+<shared-navbar  ></shared-navbar>
 
 <div class="ContenedorLanding">
 <div class=".container text-center inicio">
@@ -29,13 +29,13 @@
       <a (click)="medicosXmutual(1)" ><img src="assets/osde.jpg" class="imagenMutual" alt="Imagen de medife"></a>
     </div>
     <div class="col-2 obraSocial">      
-      <a (click)="medicosXmutual(2)" ><img src="assets/ospe.jpg" class="imagenMutual" alt="Imagen de medife"></a>
+      <a (click)="medicosXmutual2(2)" ><img src="assets/ospe.jpg" class="imagenMutual" alt="Imagen de medife"></a>
     </div>
     <div class="col-2 obraSocial">
-      <a (click)="medicosXmutual(3)" ><img src="assets/federadaSalud.jpg" class="imagenMutual " alt="Imagen de medife"></a>
+      <a (click)="medicosXmutual3(3)" ><img src="assets/federadaSalud.jpg" class="imagenMutual " alt="Imagen de medife"></a>
     </div>
     <div class="col-2 obraSocial">
-      <a (click)="medicosXmutual(4)" ><img src="assets/medife.jpg" class="imagenMutual" alt="Imagen de medife"></a>
+      <a (click)="medicosXmutual4(4)" ><img src="assets/medife.jpg" class="imagenMutual" alt="Imagen de medife"></a>
     </div>
   </div>
 </div>
