--- a/src/app/modules/landing/components/landing-page/landing-page.component.html
+++ b/src/app/modules/landing/components/landing-page/landing-page.component.html
@@ -24,7 +24,8 @@
 <div class=".container" >
   
   <div class="row filaMutuales contenedorMutuales" >
-    <h2>Trabajan con nosotros</h2>
+    <h2>Has click en tu obra social</h2>
+    <p>Mira la cartilla de medicos</p>
     <div class="col-2 obraSocial" >
       <a (click)="medicosXmutual(1)" ><img src="assets/osde.jpg" class="imagenMutual" alt="Imagen de medife"></a>
     </div>
@@ -43,29 +44,3 @@
 </div>
 
 <shared-footer></shared-footer>
-
-<!--
-<div class="row boton-mutuales">
-  <p class="d-inline-flex gap-1">
-    <a class="btn btn-primary boton-mutuales-contenido" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" >
-      Ver Mutuales
-    </a>
-  </p>
-  </div>
-  <div class="container overflow-hidden text-center collapse" id="collapseExample" >
-    <div class="row" id="collapseExample">
-      <div class="col obraSocial">
-        <a href="auth"><img src="assets/osde.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
-      </div>
-      <div class="col obraSocial">      
-        <a  href="auth"><img src="assets/ospe.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
-      </div>
-      <div class="col obraSocial">
-        <a href="auth"><img src="assets/federadaSalud.jpg" class="img-fluid p-3 federada" alt="Imagen de medife"></a>
-      </div>
-      <div class="col obraSocial">
-        <a href="auth"><img src="assets/medife.jpg" class="img-fluid p-3" alt="Imagen de medife"></a>
-      </div>
-    </div>
-  </div>
--->
